# nextcloud-git-integration

./: Cargo.toml  rust-dev.dockerfile
.cargo/: config.toml
.nc/: Caddyfile  composer.json  dev-entrypoint.sh  dev.dockerfile  post-receive  supervisord.conf
.oidc/: auth.html  discovery.json  implicit.html  jwks.json  oidc.caddyfile  private.pem  token.json
.zed/: tasks.json
src/: auth.rs  git.rs  http_request.rs  main.rs  test.rs
test/: http-client.env.json  http-client.private.env.json  test.http
