[package]
name = "git-server"
version = "0.0.1"
edition = "2024"

[dependencies]
env_logger = "0.11.10"
log = "0.4.29"
clap = { version = "4.6.0", features = ["derive"] }
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1.51.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
toml = { version = "1.1.2+spec-1.1.0" }
tower-http = { version = "0.6.8", features = ["normalize-path"] }
tower-layer = "0.3.3"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono", "derive", "json"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.2", features = ["json"] }
url = { version = "2.5.8", features = ["serde"] }
structstruck = "0.5.1"
chrono = { version = "0.4.44", features = ["serde"] }
